erDiagram
    USER_PROFILES ||--o{ CONTRACTS : "has"
    USER_PROFILES ||--o{ INVOICES : "owes"
    USER_PROFILES ||--o{ PAYMENTS : "pays"
    USER_PROFILES ||--o{ BEHAVIOR_LOGS : "generates"
    USER_PROFILES ||--o{ USER_EMBEDDINGS : "has memories"
    USER_PROFILES ||--o{ MAINTENANCE_TICKETS : "requests"
    USER_PROFILES ||--o{ CONVERSATION_HISTORY : "chats"
    
    ROOMS ||--o{ CONTRACTS : "rented as"
    ROOMS ||--o{ INVOICES : "billed to"
    
    INVOICES ||--o{ PAYMENTS : "settled by"
    CONTRACTS ||--o{ INVOICES : "generates"
    
    MAINTENANCE_TICKETS }o--|| ROOMS : "for"
    
    SEMANTIC_CACHE }o--o{ USER_PROFILES : "serves"
    
    USER_PROFILES {
        int tenant_id PK
        string full_name
        string phone_number UK
        string email
        string zalo_id
        int room_id FK
        date lease_start
        date lease_end
        enum communication_preference
        enum tone_preference
        jsonb notification_opt_out
        bool is_active
        timestamp created_at
        timestamp updated_at
    }
    
    ROOMS {
        int room_id PK
        string room_number UK
        int floor
        decimal area_m2
        decimal monthly_rent
        decimal electricity_price
        decimal water_price
        decimal service_fee
        int max_occupants
        enum status
        text description
        jsonb amenities
        timestamp created_at
    }
    
    CONTRACTS {
        int contract_id PK
        int tenant_id FK
        int room_id FK
        date start_date
        date end_date
        decimal deposit_amount
        decimal monthly_rent
        enum status
        date signed_date
        text termination_reason
        timestamp created_at
    }
    
    INVOICES {
        int invoice_id PK
        int tenant_id FK
        int room_id FK
        int contract_id FK
        date invoice_month
        decimal base_rent
        decimal electricity_kwh
        decimal electricity_cost
        decimal water_m3
        decimal water_cost
        decimal service_fee
        decimal other_charges
        decimal total_amount
        date due_date
        date paid_date
        enum status
        timestamp created_at
    }
    
    PAYMENTS {
        int payment_id PK
        int invoice_id FK
        int tenant_id FK
        decimal amount
        string payment_method
        string transaction_ref
        timestamp payment_date
        int confirmed_by
    }
    
    BEHAVIOR_LOGS {
        int log_id PK
        int tenant_id FK
        string action_type
        text description
        jsonb metadata
        timestamp timestamp
    }
    
    USER_EMBEDDINGS {
        int memory_id PK
        int tenant_id FK
        text memory_text
        vector embedding
        decimal weight
        string source
        timestamp last_retrieved
        int retrieval_count
        bool is_archived
        timestamp created_at
    }
    
    SEMANTIC_CACHE {
        int cache_id PK
        text query_text
        vector query_embedding
        text response_text
        int hit_count
        timestamp last_accessed
        timestamp expires_at
    }
    
    MAINTENANCE_TICKETS {
        int ticket_id PK
        string ticket_code UK
        int tenant_id FK
        int room_id FK
        string issue_category
        string title
        text description
        enum priority
        enum status
        string assigned_to
        decimal estimated_cost
        decimal actual_cost
        date scheduled_date
        date completed_date
        timestamp created_at
    }
    
    CONVERSATION_HISTORY {
        int conversation_id PK
        int tenant_id FK
        uuid session_id
        string source
        text user_message
        text ai_response
        string system_used
        int iterations
        jsonb tool_calls
        int latency_ms
        int tokens_used
        decimal cost_usd
        timestamp timestamp
    }
    
    APPROVAL_QUEUE {
        int approval_id PK
        string tool_name
        jsonb tool_args
        int tenant_id FK
        string requested_by
        string approver_role
        string status
        timestamp requested_at
        timestamp reviewed_at
    }
